test/Fail/Sections-14.err
Sections-14.agda:5.7-12: error: [UnequalSorts]
Set₁ != Set
when checking that the expression ∙ Set has type Set
